--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <script src="./bower_components/angular-material/angular-material.js"></script>
     <script src="./bower_components/firebase/firebase.js"></script>
     <script src="./bower_components/angularfire/dist/angularfire.js"></script>
+    <!--<script src="./bower_components/firebase-token-generator/dist/firebase-token-generator-debug.js"></script>-->
+    <!--<script src="./bower_components/firebase-token-generator/dist/firebase-token-generator-node.js"></script>-->
+    <!--<script src="./bower_components/firebase-token-generator/dist/firebase-token-generator.js"></script>-->
     <script src="./components/home/home.js"></script>
     <script src="./components/signin/signin.js"></script>
     <script src="./components/signup/signup.js"></script>
