--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 </head>
 
-<body ng-app="app" ng-controller="AppController" >
+<body ng-app="app" ng-controller="AppController as myctrl" >
 
 
 <div style="background-color: #636363; height: 70px;box-shadow: 0px 2px 0px -1px rgba(0, 0, 0, 0.2), 1px 0px 4px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);">
